# agenticpay

./: .gitignore  README.md  docker-compose.yml  issue-64.md  package-lock.json  package.json  turbo.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  post-create.sh  post-start.sh
.github/: dependabot.yml
.github/workflows/: benchmarks.yml  contracts-evm.yml  dependency-scan.yml  devcontainer.yml  formal-verification.yml  generate-docs.yml  performance.yml  tenant-isolation.yml
backend/: .gitignore  openapi.config.json  package-lock.json  package.json
backend/benchmarks/: baseline.json
backend/frontend/: next.config.ts  package-lock.json  package.json
backend/prisma/: schema.prisma
backend/scripts/: generate-openapi.ts
backend/src/: index.ts
contracts/certora/: README.md
contracts/soroban/revenue-pool/: Cargo.toml
contracts/soroban/revenue-pool/src/: lib.rs
contracts/soroban/swap-aggregator/: Cargo.toml
contracts/soroban/swap-aggregator/src/: dex_interface.rs  errors.rs  events.rs  lib.rs  router.rs  storage.rs  types.rs
contracts/src/: security_properties.rs
docs/: API-DOCS.md  DEVCONTAINER.md  SubscriptionManager.sol  gas-optimization-guide.md
docs/security/: webhook-signatures.md
frontend/: eslint.config.mjs  next.config.ts  package.json  vitest.config.ts
frontend/app/: layout.tsx
frontend/components/: WebVitals.tsx
frontend/e2e/: README.md  disputes.spec.ts  fixtures.ts  (+4 more)
infra/: main.tf  variables.tf
lighthouse/: budgets.json  budgets.mobile.json  lighthouse.config.json
scripts/: analyze-bundle.sh
(+276 files in other folders)
