[package]
name = "agenticpay-swap-aggregator"
version = "0.1.0"
edition = "2021"
description = "Soroban swap aggregator — routes token swaps across multiple Soroban DEXs with split routing, multi-hop, slippage protection and MEV resistance"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "21.7.6"

[dev-dependencies]
soroban-sdk = { version = "21.7.6", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
